--- a/vine/DESCRIPTION
+++ b/vine/DESCRIPTION
@@ -7,11 +7,12 @@ License: MIT + file LICENSE
 Imports: 
     config (>= 0.3.1),
     golem (>= 0.3.2),
+    magrittr,
     opensilexR (>= 0.0.0.9000),
     shiny (>= 1.7.1)
 Encoding: UTF-8
 LazyData: true
-RoxygenNote: 7.1.2
+RoxygenNote: 7.2.0
 URL: https://github.com/guilhemheinrich/opensilex-vine.git
 BugReports: https://github.com/guilhemheinrich/opensilex-vine.git/issues
 Suggests: 
@@ -19,5 +20,5 @@ Suggests:
     testthat (>= 3.0.0)
 Config/testthat/edition: 3
 Language: en-US
-Remotes:  
+Remotes: 
     guilhemheinrich/R-opensilex-package.git
